[tool.poetry]
name = "askbot"
version = "0.1.0"
description = ""
authors = ["arsikurin <2024kurin.av@student.letovo.ru>"]

[tool.poetry.dependencies]
python = "^3.10.3"
aiogram = "^2.19"
aiorun = "^2021.10.1"
uvloop = "^0.16.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

